# gollahalli.com

./: .firebaserc  .gitignore  .gitmodules  Build-Hugo.ps1  Pipfile  README.md  algolia.py  azure-pipeline.yml  config.toml  du_hugo.py  firebase.json  gulpfile.js  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  script.ps1  utils.py  vercel.json  webpack.config.js  wrangler.jsonc  wrangler.toml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  hugo.yml  main.yml
archetypes/: default.md
content/: _index.md  about.md  cookie-policy.md  privacy-policy.md  publications.md
content/about/: index.md
content/blog/: Emotiv-and-Matlab.md  _index.md  add-identity-to-existing-asp-net-core-mvc-application.md  azsecrets-a-cli-to-set-azure-key-vault-as-environment-variables.md  build-opencv-with-visual-studio-and-cmake-cli.md  build-opencv-with-visual-studio-and-cmake-gui.md  collatz-conjecture-lets-compute-this.md  convert-computer-psu-to-bench-power-supply.md  deploy-python-packages-to-pypi.md  dotnetcore-a-dot-net-core-sdk-uninstaller-for-POSIX-systems.md  export-your-github-and-gitlab-releases-as-a-changelog.md  git-alias-over-engineered-pretty-git-alias-printer.md  helpful-powershell-cmdlets-functions.md  helpful-powershell-cmdlets.md  importing-existing-project-to-stm32cubeide.md  introduction-to-nginx.md  (+24 more)
data/: Education.json  Experience.json  Interests.json
scripts/: Convert-WebP.ps1  convert-webp.py  convert-webp.sh  package.json  search_index.py  tsconfig.json
(+182 files in other folders)
