[tool.poetry]
name = "gollahalli-com"
version = "1.0.0"
description = ""
authors = ["Akshay Raj Gollahalli <akshay@gollahalli.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uhugo = "^1.3.1"
aiofiles = "^23.2.1"
rich = "^13.7.0"
humanize = "^4.9.0"

[tool.black]
line-length = 120

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
