[tool.poetry]
name = "gollahalli-com"
version = "1.0.0"
description = ""
authors = ["Akshay Raj Gollahalli <akshay@gollahalli.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uhugo = "^1.3.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
